--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,7 @@ html {
 .height-max-content {
   height: max-content;
 }
+
 .width-max-content {
   width: max-content;
 }
@@ -21,6 +22,7 @@ html {
 
 .main-carousel-image {
   min-width: 900px;
+  max-width: 900px;
   height: 600px;
   overflow: hidden;
 }
